# structhook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
structhook/: __init__.py  dotdict.py  model.py
tests/: test.py  test_dotdict.py  test_model.py
